before database change